# fastapi-pacer

./: .gitignore  CLAUDE.md  IMPROVEMENTS_PLAN.md  LICENSE  README.md  docker-compose.jaeger.yml  docker-compose.otel.yml  prometheus.yml  pyproject.toml
docs/: ALGORITHM.md  PERFORMANCE_ANALYSIS.md  SECURITY.md
examples/: Dockerfile  configurable_app.py  docker-compose.test.yml  docker-compose.yml  otel_demo.py  simple_app.py  test_rate_limits.py  v2_features.py
scripts/: bench.sh  bench_app.py  test_overhead.py  test_redis_latency.py
src/pacer/: __init__.py  dependencies.py  extractors.py  limiter.py  middleware.py  otel.py  policies.py  selectors.py  storage.py  storage_cluster.py  storage_simple.py
src/pacer/lua/: gcra.lua  gcra_multi.lua
tests/: conftest.py  test_concurrency.py  test_extractors.py  test_gcra.py  test_headers.py  test_hooks.py  test_integration.py  test_multi_rate.py  test_policies.py  test_policy.py  test_selectors.py
